--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = git://github.com/banks/sprig-mptt.git
 [submodule "modules/kohanut"]
 	path = modules/kohanut
-	url = git://github.com/bluehawk/kohanut
+	url = git://github.com/bluehawk/kohanut-core.git
