--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "modules/kohanut"]
 	path = modules/kohanut
 	url = git://github.com/bluehawk/kohanut-core
+[submodule "modules/kohana-twig"]
+	path = modules/kohana-twig
+	url = git://github.com/jonathangeiger/kohana-twig
